kurtosis based ica

--- a/notes/06_fastica/1_ica_ambiguous.tex
+++ b/notes/06_fastica/1_ica_ambiguous.tex
@@ -21,8 +21,8 @@ Sources can be recovered up to:
 \end{frame}
 
 \notesonly{
-ICA cannot resolve if the mixing matrix is $\vec A$ or a permuatated and/or scaled version of $\vec A$.
-It can \textbf{also} not resolve if the independent sources are $\vec s$ or a permutated and/or scaled version of $\vec s$.
+ICA cannot resolve if the mixing matrix is $\vec A$ or a permuted and/or scaled version of $\vec A$.
+It can \textbf{also} not resolve if the independent sources are $\vec s$ or a permuted and/or scaled version of $\vec s$.
 }
 
 \begin{frame}{\secname}
@@ -130,7 +130,7 @@ We can assume:
 \E \lbrack \, \vec s \, \rbrack = \vec 0
 \end{equation}
 
-Substracting the mean from $\vec x$ does not change $\vec A$:
+Subtracting the mean from $\vec x$ does not change $\vec A$:
 
 \begin{equation}
 \vec x - \E \lbrack \, \vec x \, \rbrack = \vec A \left( \vec s - \E \lbrack \, \vec s \, \rbrack \right)
