--- a/notes/06_fastica/3_badgaussians.tex
+++ b/notes/06_fastica/3_badgaussians.tex
@@ -49,7 +49,7 @@ If we assumed gaussian distributed sources, the following factorization becomes 
 
 %\slidesonly{\textbf{A more formal argument (cont'd):}}
 
-Now consider applying an orthognal mixing matrix $\widetilde{\vec A}$ that is \textbf{known}. 
+Now consider applying an orthogonal mixing matrix $\widetilde{\vec A}$ that is \textbf{known}. 
 \slidesonly{(orthogonal because we whitened the data $\vec x$)\\
 Consequently:
 }
