fixes and fixed point iteration

--- a/notes/06_fastica/0_recap_ica_whitening.tex
+++ b/notes/06_fastica/0_recap_ica_whitening.tex
@@ -24,27 +24,35 @@ Methods for solving the ICA problem:
 \end{itemize}
 \end{frame}
 
-\begin{frame}
-\underline{Outline:}
-\begin{itemize}
-    \item ICA on whitened data
-    \begin{itemize}
-        \item Whitening/sphering
-        \item Amibguities in ICA
-        \item PCA is \emph{half} the ICA Problem
-    \end{itemize}
-    \item the problem with gaussians
-    \item maximizing nongaussianity
-    \begin{itemize}
-        \item Kurtosis-based
-        \item negentropy
-    \end{itemize}
-\end{itemize}
-\end{frame}
+%\begin{frame}
+%\underline{Outline:}
+%\begin{itemize}
+    %\item ICA on whitened data
+    %\begin{itemize}
+        %\item Whitening/sphering
+        %\item Amibguities in ICA
+        %\item PCA is \emph{half} the ICA Problem
+    %\end{itemize}
+    %\item the problem with gaussians
+    %\item maximizing nongaussianity
+    %\begin{itemize}
+        %\item Kurtosis-based
+        %\item negentropy
+    %\end{itemize}
+%\end{itemize}
+%\end{frame}
 
-\newpage
+%\newpage
 
 \section{Whitening revisited}
+
+\mode<presentation>{
+\begin{frame} 
+    \begin{center} \huge
+        \secname
+    \end{center}
+\end{frame}
+}
 
 \begin{frame}{\secname}
 
@@ -86,6 +94,9 @@ where
 \question{What do we know about the variables in $\vec v$?}
 
 \pause
+
+
+\svspace{-5mm}
 
 \begin{equation}
 \label{eq:covw}
