--- a/notes/06_fastica/2_pcaica.tex
+++ b/notes/06_fastica/2_pcaica.tex
@@ -46,10 +46,11 @@ We define the two following transformation $\vec Q$ and $\widetilde{\vec A}$:
 \widetilde{\vec A} := \vec Q \, \vec A 
 \end{equation}
 
-Which yields\only<3>{ a new ICA problem}:
+Which yields\only<3>{ a new ICA problem:
 \begin{equation}
 \vec u = \vec Q\, \vec x = \vec Q\,\vec A \, \vec s = \widetilde{\vec A} \, \vec s
 \end{equation}
+}
 
 \end{frame}
 
