--- a/notes/06_fastica/tutorial.tex
+++ b/notes/06_fastica/tutorial.tex
@@ -56,7 +56,12 @@
 \end{frame}
 
 \begin{frame}
+\mode<presentation>{
+\tableofcontents[hideallsubsections]
+}
+\mode<article>{
 \tableofcontents
+}
 \end{frame}
 
 \newpage
