--- a/notes/07_stochopt/tutorial.tex
+++ b/notes/07_stochopt/tutorial.tex
@@ -62,7 +62,31 @@
 \newpage
 
 \mode<all>
-\input{./1_stochopt}
+\input{./0_motivation}
+\mode*
+
+\mode<all>
+\input{./1_explorationexploitation}
+\mode*
+
+\mode<all>
+\input{./2_discrete}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./3_stochopt}
+\mode*
+
+\mode<all>
+\input{./4_mcmc}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./5_deterministic}
 \mode*
 
 \clearpage
