--- a/notes/07_stochopt/tutorial.tex
+++ b/notes/07_stochopt/tutorial.tex
@@ -79,24 +79,25 @@
 \input{./3_stochopt}
 \mode*
 
-\mode<all>
-\input{./4_mcmc}
-\mode*
+%\mode<all>
+%\input{./4_mcmc}
+%\mode*
 
 \clearpage
 
 \mode<all>
-\input{./5_deterministic}
+\input{./4_deterministic}
+%\input{./5_deterministic}
 \mode*
 
 \clearpage
 
-%\section{References}
-%\begin{frame}[allowframebreaks] \frametitle{References}
-	%\scriptsize
-	%\bibliographystyle{plainnat}
-	%\bibliography{bibliography}
-%\end{frame}
+\section{References}
+\begin{frame}[allowframebreaks] \frametitle{References}
+	\scriptsize
+	\bibliographystyle{plainnat}
+	\bibliography{bibliography}
+\end{frame}
 
 \end{rightcolumn}
 \end{paracol}
