--- a/latex/headerMIslides.tex
+++ b/latex/headerMIslides.tex
@@ -98,6 +98,7 @@ inner ysep=10pt
 \institute[www.ni.tu-berlin.de]{Fachgebiet Neuronale Informationsverarbeitung (NI)}
 \author[Kashef]{Youssef Kashef}
 \date{SoSe 20}
+%\date{}
 
 \graphicspath{{../../../../../figures/pdf/}}
 
