--- a/notes/07_stochopt/0_motivation.tex
+++ b/notes/07_stochopt/0_motivation.tex
@@ -1,4 +1,4 @@
-\section{Problems with how we've been optimizing so far}
+\section{Limitations in how we've been optimizing so far}
 
 \begin{frame}
 
