--- a/notes/07_stochopt/3_stochopt.tex
+++ b/notes/07_stochopt/3_stochopt.tex
@@ -163,7 +163,7 @@ Convergence to the global optimum is guaranteed if $\beta_t \sim \ln (t)$\footno
 \end{itemize}
 \end{frame}
 
-\section{The stationary distribution}
+\subsection{The stationary distribution}
 
 \begin{frame}
 
