--- a/notes/08_clustering/tutorial.tex
+++ b/notes/08_clustering/tutorial.tex
@@ -62,7 +62,31 @@
 \newpage
 
 \mode<all>
-\input{./1_clustering}
+\input{./1_kmeans}
+\mode*
+
+%\clearpage
+
+\mode<all>
+\input{./2_kmeans_batch}
+\mode*
+
+%\clearpage
+
+\mode<all>
+\input{./3_kmeans_online}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./5_pairwise_data}
+\mode*
+
+%\clearpage
+
+\mode<all>
+\input{./6_pairwsie_meanfield}
 \mode*
 
 \clearpage
